nginx-ingress.yaml
# As shown at https://kubernetes.github.io/ingress-nginx/deploy/#docker-desktop
# you must install the ingress controller software using:
#   kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.0.4/deploy/static/provider/cloud/deploy.yaml
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-grafana
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duss-webapp-svc
            port:
              number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /rental-server
            pathType: ImplementationSpecific
            backend:
              service:
                name: grpc-rental-server-svc
                port:
                  name: grpc
